--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=8000
 
-URI_MONGO=mongodb://localhost:27017/blog_backend
+URI_MONGO=mongodb+srv://jceferino:<password>@cluster0.ammztzp.mongodb.net/blogPM?retryWrites=true&w=majority&appName=Cluster0
